--- a/src/app/clientside/clientpages/landing_page/header/header.component.html
+++ b/src/app/clientside/clientpages/landing_page/header/header.component.html
@@ -30,8 +30,8 @@
                   <div class="nav-item dropdown normal-dropdown">
                     <a href="/custlogin" class="nav-link dropdown-toggle" aria-expanded="false" data-toggle="dropdown" aria-haspopup="true"><i class="icofont-lock ml-1"></i>{{username}}</a>
                     <div aria-labelledby="homeDropdown" class="dropdown-menu">
-                        <a *ngIf="Showlogin" href="/custlogin" class="dropdown-item">Login In</a>
-                        <a *ngIf="Showlogout" (click)="Logout()" class="dropdown-item">Log Out</a>
+                        <a *ngIf="Showlogin" href="/custlogin" class="dropdown-item">LOG IN</a>
+                        <a *ngIf="Showlogout" (click)="Logout()" class="dropdown-item">LOG OUT</a>
                         <a *ngIf="Showcreate" href="/create-user" class="dropdown-item">Create</a>
                     </div>
                   </div>
