--- a/src/app/clientside/clientpages/login_client/login_client.component.scss
+++ b/src/app/clientside/clientpages/login_client/login_client.component.scss
@@ -9,7 +9,8 @@ body {
 }
 
 .container {
-    padding: 110px;
+    // padding: 110px;
+    margin-top: 116px;
 }
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #ffffff!important;
