--- a/src/app/clientside/clientpages/checkpincode/checkpincode.component.scss
+++ b/src/app/clientside/clientpages/checkpincode/checkpincode.component.scss
@@ -51,7 +51,10 @@ body {
 }
 
 .container {
-    padding: 110px;
+    // padding: 110px;
+    margin-top: 116px;
+
+    // margin-top: 15px;
 }
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: #ffffff!important;
