--- a/src/app/clientside/clientpages/login_client/login_client.component.html
+++ b/src/app/clientside/clientpages/login_client/login_client.component.html
@@ -1,9 +1,9 @@
 
 <body>
   <div class="container">
-    <div class="row ml-lg-10 ml-md-10 ">
-      <div class="col-md-4" ></div>
-      <div class="col-md-offset-8 col-md-4 text-center">
+    <div class="row ml-lg-10 ml-md-6 ml-md-6 ">
+      <div class="col-md-4 col-sm-8" ></div>
+      <div class="col-md-offset-8 col-md-4 col-sm-8 text-center">
         <!-- <h1 class='text-white'>Prototype Login Form</h1> -->
           <div class="form-login">
             <h4>Login</h4>
