--- a/src/app/clientside/clientpages/landing_page/header/header.component.html
+++ b/src/app/clientside/clientpages/landing_page/header/header.component.html
@@ -33,6 +33,7 @@
                         <a *ngIf="Showlogin" href="/custlogin" class="dropdown-item">LOG IN</a>
                         <a *ngIf="Showlogout" (click)="Logout()" class="dropdown-item">LOG OUT</a>
                         <a *ngIf="Showcreate" href="/create-user" class="dropdown-item">Create</a>
+                        <a  href="/whishlist" class="dropdown-item">Whishlist</a>
                     </div>
                   </div>
               </div>
