--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -46,7 +46,7 @@
                   <div class="col-md-3 col-sm-4" *ngFor='let prod of Item_Masters'>
                       <div class="product">
                           <div class="image">
-                              <a ><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
+                              <a href="#" data-toggle="modal" data-target="#product-quick-view-modal"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
                               <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                           </div>
                           <!-- /.image-->
