--- a/src/app/clientside/clientpages/whishlist/whishlist.component.html
+++ b/src/app/clientside/clientpages/whishlist/whishlist.component.html
@@ -2,14 +2,14 @@
   <div id="content">
       <div class="container">
           <ul class="breadcrumb justify-content-md-end justify-content-center">
-              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
               <li class="breadcrumb-item active">My wishlist      </li>
           </ul>
           <div class="box text-center">
               <div class="row">
                   <div class="col-md-10 offset-md-1">
                       <h1>My wishlist</h1>
-                      <p class="lead">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                      <!-- <p class="lead">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p> -->
                   </div>
               </div>
           </div>
@@ -20,12 +20,12 @@
                       <div class="col-md-3 col-sm-4"*ngFor='let prod of Item_Master_' >
                           <div class="product">
                               <div class="image">
-                                  <a href="detail.html"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/product1.jpg" alt="" class="img-fluid image1"></a>
+                                  <a href="#" data-toggle="modal" data-target="#product-quick-view-modal"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
                                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">Quick view</a></div>
                               </div>
                               <!-- /.image-->
                               <div class="text">
-                                  <h3><a href="detail.html">{{prod.Item_Name}}</a></h3>
+                                  <h3><a>{{prod.Item_Name}}</a></h3>
                                   <p class="card-text text-left  mb-0">Price: <span class="font-weight-bold float-right text-success">{{prod.Price}}</span></p>
 
                                  <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{prod.Qty}}</span></p>
@@ -52,7 +52,7 @@
                                       <button type="button" data-dismiss="modal" aria-hidden="true" class="close">×</button>
                                       <div class="row quick-view product-main">
                                           <div class="col-sm-6">
-                                              <div class="quick-view-main-image"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailbig1.jpg" alt="" class="img-fluid"></div>
+                                              <div class="quick-view-main-image"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid"></div>
                                               <div class="ribbon ribbon-quick-view sale">
                                                   <div class="theribbon">SALE</div>
                                                   <div class="ribbon-background"></div>
@@ -63,17 +63,17 @@
                                                   <div class="ribbon-background"></div>
                                               </div>
                                               <!-- /.ribbon-->
-                                              <div class="row thumbs">
+                                              <!-- <div class="row thumbs">
                                                   <div class="col-4"><a href="img/detailbig1.jpg" class="thumb"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare.jpg" alt="" class="img-fluid"></a></div>
                                                   <div class="col-4"><a href="img/detailbig2.jpg" class="thumb"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare2.jpg" alt="" class="img-fluid"></a></div>
                                                   <div class="col-4"><a href="img/detailbig3.jpg" class="thumb"><img src="https://d19m59y37dris4.cloudfront.net/minimal/2-1-1/img/detailsquare3.jpg" alt="" class="img-fluid"></a></div>
-                                              </div>
+                                              </div> -->
                                           </div>
                                           <div class="col-sm-6">
-                                              <h2>White Blouse Armani</h2>
-                                              <p class="text-muted text-small text-center">White lace top, woven, has a round neck, short sleeves, has knitted lining attached</p>
+                                              <h2>Item Name</h2>
+                                              <p class="text-muted text-small text-center">Item Description</p>
                                               <div class="box">
-                                                      <div class="sizes">
+                                                      <!-- <div class="sizes">
                                                           <h3>Available sizes</h3>
                                                           <label for="size_s">
                                                               <a href="#">S</a>
@@ -87,7 +87,7 @@
                                                               <a href="#">L</a>
                                                               <input id="size_l" type="radio" name="size" value="l" class="size-input">
                                                           </label>
-                                                      </div>
+                                                      </div> -->
                                                       <p class="price">$124.00</p>
                                                       <p class="text-center">
                                                           <button type="submit" class="btn btn-outline-primary"><i class="fa fa-shopping-cart"></i> Add to cart</button>
