--- a/src/app/AdminPanel/pages/route-master/add-edit-route/add-edit-route.component.html
+++ b/src/app/AdminPanel/pages/route-master/add-edit-route/add-edit-route.component.html
@@ -1,20 +1,21 @@
+
 <div><div *ngIf="errorMessage != '' " class='alert alert-danger'>{{errorMessage}}</div></div>
 <form >
   <div>
 
     <div class="form-group row">
-      <label class="col-sm-2 col-form-label">Route Name<span class="warningclass">*</span></label>
-      <div class="col-sm-4">
+      <!-- <label class="col-sm-2 col-form-label">Route Name<span class="warningclass">*</span></label> -->
+      <!-- <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="routeObj.Route_Name" id="Route_Name" [ngModelOptions]="{standalone: true}">
-      </div>
-      <!-- <label class="col-sm-2 col-form-label">Route From<span class="warningclass">*</span></label>
+      </div> -->
+      <label class="col-sm-2 col-form-label">Route From<span class="warningclass">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="routeObj.Route_From" id="Route_From" [ngModelOptions]="{standalone: true}">
       </div>
       <label class="col-sm-2 col-form-label">Route To<span class="warningclass">*</span></label>
       <div class="col-sm-4">
         <input class="form-control" type="text" [(ngModel)]="routeObj.Route_To" id="Route_To" [ngModelOptions]="{standalone: true}">
-      </div> -->
+      </div>
 
     </div>
     <div class="form-group row">
@@ -30,6 +31,28 @@
     </div>
 
   </div>
+  <div>
+    <!-- <agm-map [latitude]="latitude" [longitude]="longitude" style="height: 300px" (mapClick)="placeMarker($event)">
+      <agm-marker *ngFor="let marker of markers" [latitude]="marker.latitude" [longitude]="marker.longitude"></agm-marker>
+    </agm-map> -->
+    <!-- <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom">
+      <agm-marker [latitude]="latitude" [longitude]="longitude" [markerDraggable]="true"
+        ></agm-marker>
+    </agm-map> -->
+      <!-- <agm-map [latitude]="latitude" [longitude]="longitude" [zoom]="zoom" >
+            <agm-marker [latitude]="latitude" [longitude]="longitude"></agm-marker>
+            <agm-direction [origin]="origin" [destination]="destination" [waypoints]="waypoints">
+        </agm-direction>
+      </agm-map> -->
+      <!-- <agm-map [latitude]="latitude" [longitude]="longitude">
+        <agm-direction
+          [origin]="origin"
+          [destination]="destination"
+          [waypoints]="waypoints"
+        >
+        </agm-direction>
+      </agm-map> -->
+  </div>
   <br />
   <hr />
   <div class="text-center">
@@ -41,10 +64,6 @@
     </div>
   </div>
 
-  <div>
-    <!-- <agm-map [latitude]="latitude" [longitude]="longitude" style="height: 300px" (mapClick)="placeMarker($event)">
-      <agm-marker *ngFor="let marker of markers" [latitude]="marker.latitude" [longitude]="marker.longitude"></agm-marker>
-    </agm-map> -->
-  </div>
+
 
 </form>
