--- a/src/app/AdminPanel/pages/vehicle-master/vehicle-list/vehicle-list.component.html
+++ b/src/app/AdminPanel/pages/vehicle-master/vehicle-list/vehicle-list.component.html
@@ -1,6 +1,6 @@
 <!-- *********************************************** Insert-Update **********************************************  -->
 <div *ngIf="IsAddEdit">
-  <div><div class='alert alert-danger'><span>All * fields are mandatory</span></div></div>
+  <div><div class='alert alert-danger'><span>{{warningMessage}}</span></div></div>
   <form >
     <div>
       <div class="form-group row">
@@ -8,7 +8,6 @@
         <div class="col-sm-4">
           <input class="form-control"  [ngClass] ="vehicleObj.Vehicle_No == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="vehicleObj.Vehicle_No" id="Vehicle_No" [ngModelOptions]="{standalone: true}">
         </div>
-
         <label class="col-sm-2 col-form-label">Vehicle Type<span class="warningclass">*</span></label>
         <div class="col-sm-4">
           <select class="form-control" [(ngModel)]="vehicleObj.Vehicle_Type" id="Vehicle_Type"
@@ -19,27 +18,75 @@
           </select>
         </div>
       </div>
-
       <div class="form-group row">
         <label class="col-sm-2 col-form-label">Vehicle Category</label>
         <div class="col-sm-4">
-          <ng-select
-                [items]="VehicleCategoryList"
-                [(ngModel)]="vehicleObj.Vehicle_Category"
-                name="licenseAuthorityId"
-                bindValue="id"
-                bindLabel="name"
-                placeholder="Select Category">
-                </ng-select>
+          <ng-select [items]="VehicleCategoryList" [(ngModel)]="vehicleObj.Vehicle_Category" name="licenseAuthorityId" bindValue="id" bindLabel="name" placeholder="Select Category"> </ng-select>
         </div>
-
+        <label class="col-sm-2 col-form-label">Manufacture By</label>
+        <div class="col-sm-4">
+          <ng-select [items]="ManufactureByList" [(ngModel)]="vehicleObj.Manufacture_By" name="Manufacture_By" bindValue="id" bindLabel="name" placeholder="Select Manufacture By"> </ng-select>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Model Name</label>
+        <div class="col-sm-4">
+          <input class="form-control"  type="text" [(ngModel)]="vehicleObj.Model_Name" id="Model_Name" [ngModelOptions]="{standalone: true}">
+        </div>
+        <label class="col-sm-2 col-form-label">Manufacture Year</label>
+        <div class="col-sm-4">
+          <input class="form-control"  type="text" [(ngModel)]="vehicleObj.Manufacture_Year" id="Manufacture_Year" [ngModelOptions]="{standalone: true}">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Reg No</label>
+        <div class="col-sm-4">
+          <input class="form-control"  type="text" [(ngModel)]="vehicleObj.Reg_No" id="Reg_No" [ngModelOptions]="{standalone: true}">
+        </div>
+        <label class="col-sm-2 col-form-label">Reg Type</label>
+        <div class="col-sm-4">
+          <ng-select [items]="RegTypeList" [(ngModel)]="vehicleObj.Reg_Type" name="Reg_Type" bindValue="id" bindLabel="name" placeholder="Select Reg Type"> </ng-select>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Measurement Method</label>
+        <div class="col-sm-4">
+          <ng-select [items]="MeasurementList" [(ngModel)]="vehicleObj.Measurement_Method" name="Measurement_Method" bindValue="id" bindLabel="name" placeholder="Select Measurement Method"> </ng-select>
+        </div>
         <label class="col-sm-2 col-form-label">Remark</label>
         <div class="col-sm-4">
           <input class="form-control"  type="text" [(ngModel)]="vehicleObj.Remark" id="Remark" [ngModelOptions]="{standalone: true}">
         </div>
 
-      </div>
 
+      </div>
+      <div class="form-group row">
+         <label class="col-sm-2 col-form-label">Reg Effective From</label>
+        <div class="col-sm-4">
+          <mat-form-field appearance="fill" >
+            <mat-label>Choose a date</mat-label>
+            <input class="" matInput [matDatepicker]="fromDate" [(ngModel)]="vehicleObj.Reg_Effectivefrom_date" id="Reg_Effectivefrom_date" [ngModelOptions]="{standalone: true}">
+            <mat-datepicker-toggle matSuffix [for]="fromDate"></mat-datepicker-toggle>
+            <mat-datepicker #fromDate></mat-datepicker>
+          </mat-form-field>
+          <!-- <input class="form-control"  type="text" [(ngModel)]="vehicleObj.Reg_Effectivefrom_date" id="Reg_Effectivefrom_date" [ngModelOptions]="{standalone: true}"> -->
+            <!-- <input [owlDateTime]="dt2" placeholder="Date Time">
+            <span [owlDateTimeTrigger]="dt2"><i class="fa fa-calendar"></i></span> -->
+            <!-- <owl-date-time [pickerType]="'calendar'" #dt2></owl-date-time> -->
+        </div>
+
+        <label class="col-sm-2 col-form-label">Reg Effective To</label>
+        <div class="col-sm-4">
+          <mat-form-field appearance="fill" >
+            <mat-label>Choose a date</mat-label>
+            <input class="" matInput [matDatepicker]="toDate" [(ngModel)]="vehicleObj.Reg_Effectiveto_date" id="Reg_Effectiveto_date" [ngModelOptions]="{standalone: true}">
+            <mat-datepicker-toggle matSuffix [for]="toDate"></mat-datepicker-toggle>
+            <mat-datepicker #toDate></mat-datepicker>
+          </mat-form-field>
+          <!-- <input class="form-control"  type="text" [(ngModel)]="vehicleObj.Reg_Effectiveto_date" id="Reg_Effectiveto_date" [ngModelOptions]="{standalone: true}"> -->
+        </div>
+
+      </div>
     </div>
     <br />
     <hr />
@@ -83,6 +130,7 @@
                   <th pSortableColumn="Vehicle_No">Vehicle No <p-sortIcon field="Vehicle_No"></p-sortIcon></th>
                   <th pSortableColumn="Vehicle_TypeDesc">Vehicle Type <p-sortIcon field="Vehicle_TypeDesc"></p-sortIcon></th>
                   <th pSortableColumn="Vehicle_CategoryDesc">Vehicle Category<p-sortIcon field="Vehicle_CategoryDesc"></p-sortIcon></th>
+                  <th pSortableColumn="MeasurementDesc">Measurement<p-sortIcon field="MeasurementDesc"></p-sortIcon></th>
                   <th pSortableColumn="StatusDesc">Status <p-sortIcon field="StatusDesc"></p-sortIcon></th>
                   <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th>
                   <th >Action </th>
@@ -95,6 +143,7 @@
                   <th>
                       <input pInputText type="text" (input)="dt.filter($event.target.value, 'Vehicle_CategoryDesc', 'contains')" placeholder="Search by Category" class="form-control">
                   </th>
+                  <th></th>
                   <th></th>
                   <th></th>
                   <th></th>
@@ -114,6 +163,9 @@
                     {{item.Vehicle_CategoryDesc}}
                   </td>
                   <td>
+                    {{item.MeasurementDesc}}
+                  </td>
+                  <td>
                         {{item.StatusDesc}}
                   </td>
                   <td style = "width: 220px;">
@@ -127,7 +179,7 @@
               </ng-template>
               <ng-template pTemplate="emptymessage">
               <tr>
-              <td colspan="6">No items found</td>
+              <td colspan="7">No items found</td>
               </tr>
               </ng-template>
           </p-table>
