Captcha functionality by RG

--- a/src/app/AdminPanel/pages/vehicle-master/vehicle-list/vehicle-list.component.html
+++ b/src/app/AdminPanel/pages/vehicle-master/vehicle-list/vehicle-list.component.html
@@ -36,7 +36,7 @@
         </div>
         <label class="col-sm-2 col-form-label">Manufacture Year</label>
         <div class="col-sm-4">
-          <input class="form-control"  type="text" [(ngModel)]="vehicleObj.Manufacture_Year" id="Manufacture_Year" [ngModelOptions]="{standalone: true}">
+          <input class="form-control"  type="number" [(ngModel)]="vehicleObj.Manufacture_Year" id="Manufacture_Year" [ngModelOptions]="{standalone: true}">
         </div>
       </div>
       <div class="form-group row">
