--- a/src/app/clientside/clientpages/checkpincode/checkpincode.component.scss
+++ b/src/app/clientside/clientpages/checkpincode/checkpincode.component.scss
@@ -41,10 +41,10 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 body {
 
-  background-image:url('../../../../assets/img/img/523447.jpg');
+  background-image:url('../../../../assets/img/img/1001.jpg');
   background-position:center;
   background-size:cover;
-
+  background-attachment: fixed;
   -webkit-font-smoothing: antialiased;
   font: normal 14px Roboto,arial,sans-serif;
   font-family: 'Dancing Script', cursive!important;
