--- a/src/app/clientside/clientpages/subcategory/subcategory.component.html
+++ b/src/app/clientside/clientpages/subcategory/subcategory.component.html
@@ -28,6 +28,7 @@
                       <div class="card-body">
 
                         <div id="accordion" role="tablist" class="mb-5">
+                          <!-- <jw-pagination [items]="Catg_Master" (changePage)="onChangePage($event)"></jw-pagination> -->
                           <div class="card" *ngFor="let notification of Catg_Master; let i=index;" >
                             <div class="card-header sortable" id="headingOne" (click)="SubCategoryList(notification.Catg_ID)"  data-toggle="collapse"
                             [attr.data-target]="'#collapse'+i"
