--- a/src/app/clientside/clientpages/landing_page/product/product.component.html
+++ b/src/app/clientside/clientpages/landing_page/product/product.component.html
@@ -4,29 +4,29 @@
     <ngb-carousel (slide)="slideActivate($event)" class="myclass">
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img src="assets/img/slider/2461341.jpg" alt="Angular Carousel 1" style="width: 100%; height: 50vh">
+          <img src="assets/img/slider/grosary1.png" alt="Angular Carousel 1" style="width: 100%; height: 50vh">
         </div>
         <div class="carousel-caption">
-          <h3>Title Goes Here</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+          <!-- <h3>Title Goes Here</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img src="assets/img/slider/2461354.jpg" alt="Angular Carousel 2" style="width: 100%; height: 50vh">
+          <img src="assets/img/slider/grosary2.png" alt="Angular Carousel 2" style="width: 100%; height: 50vh">
         </div>
         <div class="carousel-caption">
-          <h3>Title Goes Here</h3>
-          <p>Consectetur tortor volutpat pretium.</p>
+          <!-- <h3>Title Goes Here</h3>
+          <p>Consectetur tortor volutpat pretium.</p> -->
         </div>
       </ng-template>
       <ng-template ngbSlide>
         <div class="picsum-img-wrapper">
-          <img src="assets/img/slider/13.png" alt="Angular Carousel 2" style="width: 100%; height: 50vh">
+          <img src="assets/img/slider/grosary3.png" alt="Angular Carousel 2" style="width: 100%; height: 50vh">
         </div>
         <div class="carousel-caption">
-          <h3>Title Goes Here</h3>
-          <p>Consectetur tortor volutpat pretium.</p>
+          <!-- <h3>Title Goes Here</h3>
+          <p>Consectetur tortor volutpat pretium.</p> -->
         </div>
       </ng-template>
     </ngb-carousel>
